--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ align-items: center;
     border-radius: 12px;
     padding: 34px;
     background-image: url('bg.jpg');
+    position: relative;
 }
 .songItemContainer{
     margin-top: 30px;
